// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Navigation (unit tests) when rendering with required props and notifications should match the snapshot 1`] = `
<kv-tab-navigation>
  <template shadowrootmode="open">
    <kv-tab-item hasnotification="" label="Tab 1" selected="" size="large" tabkey="tab1"></kv-tab-item>
    <kv-tab-item label="Tab 1" size="large" tabkey="tab2"></kv-tab-item>
    <kv-tab-item label="Tab 1" size="large" tabkey="tab3"></kv-tab-item>
    <kv-tab-item label="Tab 1" size="large" tabkey="tab4"></kv-tab-item>
    <kv-tab-item label="Tab 1" size="large" tabkey="tab5"></kv-tab-item>
    <div class="selected-tab-indicator" style="left: 0px; width: 62px;"></div>
  </template>
</kv-tab-navigation>
`;

exports[`Tab Navigation (unit tests) when rendering with required props should match the snapshot 1`] = `
<kv-tab-navigation>
  <template shadowrootmode="open">
    <kv-tab-item label="Tab 1" selected="" size="large" tabkey="tab1"></kv-tab-item>
    <kv-tab-item label="Tab 1" size="large" tabkey="tab2"></kv-tab-item>
    <kv-tab-item label="Tab 1" size="large" tabkey="tab3"></kv-tab-item>
    <kv-tab-item label="Tab 1" size="large" tabkey="tab4"></kv-tab-item>
    <kv-tab-item label="Tab 1" size="large" tabkey="tab5"></kv-tab-item>
    <div class="selected-tab-indicator" style="left: 0px; width: 48px;"></div>
  </template>
</kv-tab-navigation>
`;
